--- a/misc-utils/logger.1
+++ b/misc-utils/logger.1
@@ -41,16 +41,16 @@
 .Nd a shell command interface to the syslog(3) system log module
 .Sh SYNOPSIS
 .Nm logger
-.Op Fl isd
+.Op Fl dhisV
 .Op Fl f Ar file
+.Op Fl n Ar server
+.Op Fl P Ar port
 .Op Fl p Ar pri
 .Op Fl t Ar tag
 .Op Fl u Ar socket
-.Op Fl n Ar server
-.Op Fl P Ar udpport
-.Op Ar message ...
+.Op Ar message
 .Sh DESCRIPTION
-.Nm Logger
+.Nm logger
 makes entries in the system log.
 It provides a shell command interface to the
 .Xr syslog  3
@@ -59,41 +59,42 @@ system log module.
 Options:
 .Pp
 .Bl -tag -width "message"
-.It Fl i, Fl Fl id
-Log the process id of the logger process
-with each line.
-.It Fl s, Fl Fl stderr
-Log the message to standard error, as well as the system log.
-.It Fl f, Fl Fl file Ar file
-Log contents of the specified file. This option cannot be
-combined with command line message.
-.It Fl p, Fl Fl priority Ar pri
-Enter the message with the specified priority.
-The priority may be specified numerically or as a ``facility.level''
-pair.
-For example, ``\-p local3.info'' logs the message(s) as
-.Ar info Ns rmational
-level in the
-.Ar local3
-facility.
-The default is ``user.notice.''
-.It Fl t, Fl Fl tag Ar tag
-Mark every line in the log with the specified
-.Ar tag  .
-.It Fl u, Fl Fl socket Ar sock
-Write to socket as specified with
-.Ar socket
-instead of builtin syslog routines.
 .It Fl d, Fl Fl udp
-Use a datagram instead of a stream connection to this socket.
-.It Fl n, Fl Fl server Ar serv
-Write to remote syslog server using UDP as specified with
+Use datagram (UDP) instead of the default stream connection (TCP).
+.It Fl i, Fl Fl id
+Log the process ID of the logger process with each line.
+.It Fl f, Fl Fl file Ar file
+Log the contents of the specified \fIfile\fR.  This option cannot be
+combined with a command-line message.
+.It Fl h, Fl Fl help
+Display a help text and exit.
+.It Fl n, Fl Fl server Ar server
+Write to the specified remote syslog
 .Ar server
-instead of builtin syslog routines.
+using UDP instead of to the builtin syslog routines.
 .It Fl P, Fl Fl port Ar port
-Change UDP port to the value as specified with
-.Ar udpport  .
-Default port number is 514.
+Use the specified UDP
+.Ar port  .
+The default port number is 514.
+.It Fl p, Fl Fl priority Ar priority
+Enter the message into the log with the specified
+.Ar priority  .
+The priority may be specified numerically or as a \fIfacility.level\fR
+pair.
+For example, \fB-p local3.info\fR logs the message as
+informational in the local3 facility.
+The default is \fIuser.notice\fR.
+.It Fl s, Fl Fl stderr
+Output the message to standard error as well as to the system log.
+.It Fl t, Fl Fl tag Ar tag
+Mark every line to be logged with the specified
+.Ar tag  .
+.It Fl u, Fl Fl socket Ar socket
+Write to the specified
+.Ar socket
+instead of to the builtin syslog routines.
+.It Fl V, Fl Fl version
+Display version information and exit.
 .It --
 End the argument list. This is to allow the
 .Ar message
@@ -114,7 +115,7 @@ sensitive nature), cron, daemon, ftp, kern (can't be generated from user
 process), lpr, mail, news, security (deprecated synonym for auth), syslog,
 user, uucp, and local0 to local7, inclusive.
 .Pp
-Valid level names are):
+Valid level names are:
 alert, crit, debug, emerg, err, error (deprecated synonym for err),
 info, notice, panic (deprecated synonym for emerg), warning,
 warn (deprecated synonym for warning).
