ldattach: cleanup usage()
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/TODO
+++ b/TODO
@@ -9,6 +9,11 @@ dmesg
 
  - add --color to colorize err and panic messages
 
+ldattach
+--------
+
+  - write usage()
+
 minix (fsck, mkfs)
 ------------------
 
